--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,7 @@
 {
+    "scripts": {
+      "test": "C:\\xampp\\htdocs\\curso-php-phpunit\\vendor\\bin\\phpunit C:\\xampp\\htdocs\\curso-php-phpunit\\src"
+    },
     "autoload": {
         "psr-4": {"": "src/", "MyFramework\\": "app/"}
     },
